// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AdminSearchPageComponent > should snap with a search key 1`] = `
<tm-admin-search-page
  accountRequests={[Function Array]}
  characterLimit={[Function Number]}
  instructors={[Function Array]}
  loadingBarService={[Function _LoadingBarService]}
  searchQuery={[Function String]}
  searchService={[Function _SearchService]}
  searchString=""
  statusMessageService={[Function _StatusMessageService]}
  students={[Function Array]}
>
  <div
    class="card bg-light top-padded"
  >
    <div
      class="card-body"
    >
      <div
        class="input-group"
      >
        <input
          aria-label="Search"
          class="form-control ng-untouched ng-pristine ng-valid"
          id="search-box"
          maxlength="100"
          type="text"
        />
        <button
          class="btn btn-primary input-group-text"
          id="search-button"
        >
          Search
        </button>
      </div>
      <span>
        96 characters left
      </span>
    </div>
  </div>
</tm-admin-search-page>
`;

exports[`AdminSearchPageComponent > should snap with default fields 1`] = `
<tm-admin-search-page
  accountRequests={[Function Array]}
  characterLimit={[Function Number]}
  instructors={[Function Array]}
  loadingBarService={[Function _LoadingBarService]}
  searchQuery=""
  searchService={[Function _SearchService]}
  searchString=""
  statusMessageService={[Function _StatusMessageService]}
  students={[Function Array]}
>
  <div
    class="card bg-light top-padded"
  >
    <div
      class="card-body"
    >
      <div
        class="input-group"
      >
        <input
          aria-label="Search"
          class="form-control ng-untouched ng-pristine ng-valid"
          id="search-box"
          maxlength="100"
          type="text"
        />
        <button
          class="btn btn-primary input-group-text"
          id="search-button"
        >
          Search
        </button>
      </div>
      <span>
        100 characters left
      </span>
    </div>
  </div>
</tm-admin-search-page>
`;
